@@ -324,9 +324,9 @@
 #define SIG_OUTPUT_COMPARE0     _VECTOR(10)
 #define SIG_OVERFLOW0           _VECTOR(11)
 #define SIG_SPI                 _VECTOR(12)
-#define SIG_UART0_RECV          _VECTOR(13)
-#define SIG_UART0_DATA          _VECTOR(14)
-#define SIG_UART0_TRANS         _VECTOR(15)
+#define SIG_USART_RECV          _VECTOR(13)
+#define SIG_USART_DATA          _VECTOR(14)
+#define SIG_USART_TRANS         _VECTOR(15)
 #define SIG_USI_START           _VECTOR(16)
 #define SIG_USI_OVERFLOW        _VECTOR(17)
 #define SIG_COMPERATOR          _VECTOR(18)
